Update mac_os_bash_profile.sh